provide jsp tag

--- a/project.properties
+++ b/project.properties
@@ -15,15 +15,18 @@
 # you can put key/value pairs here.
 # Use Config.getParameter(..) to retrieve the values during runtime.
 
-atom.config.external.mode=develop
-atom.config.LESS.enabled=true
-atom.config.LESS.source.folder=./../../../../_ui/responsive/theme-blue/css/
-atom.config.LESS.dest.folder=./../../../../_ui/responsive/theme-blue/css/
-atom.config.external.compress.enabled=true
-atom.config.external.compress.source.filePath=./../../../../WEB-INF/tags/responsive/template/compressible/
-atom.config.external.compress.addon.folder=  
-atom.config.js.root.folder=./../../../../_ui/responsive/common/
-atom.config.css.root.folder=./../../../../_ui/responsive/theme-blue/css/
+atom.config.mode=develop 
+atom.config.LESS.enabled=true  
+#3atom.config.LESS.source.folder=./../../../../_ui/responsive/theme-blue/css/
+atom.config.LESS.source.folder=./_ui/responsive/theme-blue/css/
+atom.config.LESS.dest.folder=./_ui/responsive/theme-blue/css/
+atom.config.compress.enabled=true
+atom.config.compress.source.filePath=./WEB-INF/tags/responsive/template/compressible/
+atom.config.compress.js.dest.filePath=./_ui/responsive/common/js/
+atom.config.compress.css.dest.filePath=./_ui/responsive/theme-blue/css/
+atom.config.compress.addon.folder=  
+atom.config.js.root.folder=./_ui/responsive/common/
+atom.config.css.root.folder=./_ui/responsive/theme-blue/css/
 
 # Specifies the location of the spring context file added automatically to the global platform application context.
 atom.application-context=atom-spring.xml
