--- a/project.properties
+++ b/project.properties
@@ -11,21 +11,38 @@
 #   
 #  
 # -----------------------------------------------------------------------
-   
+    
 # you can put key/value pairs here.
 # Use Config.getParameter(..) to retrieve the values during runtime.
 
-atom.config.LESS.enabled=true  
-#3atom.config.LESS.source.folder=./../../../../_ui/responsive/theme-blue/css/
+###########################################################################################
+#
+# following part used to configure static resources related optimization
+# 	all the attributes with name XXXX.folder will be consumed by gulp 
+# 	and with name XXX.filePath with consumed by java (or both with gulp)
+# 	XXXX.folder should relative path and root is webroot folder in storefront 
+# 	XXX.filePath should related to HTTP context Path (or webroot folder)  
+#
+###########################################################################################
+atom.config.LESS.enabled=true
+# LESS file folder , consumed by gulp  
 atom.config.LESS.source.folder=./_ui/responsive/theme-blue/css/
 atom.config.LESS.dest.folder=./_ui/responsive/theme-blue/css/
+
 atom.config.compress.enabled=true
-atom.config.compress.source.filePath=./WEB-INF/tags/responsive/template/compressible/
+
+# folder for css.tag and js.tag, gulp will try to find these files and compress whatever in them 
+atom.config.compress.sourceTag.folder=./WEB-INF/tags/responsive/template/compressible/
+
+# final compress result folder, combind.min.js/css will place this this folder, consumed by both gulp and JSP
 atom.config.compress.js.dest.filePath=./_ui/responsive/common/js/
 atom.config.compress.css.dest.filePath=./_ui/responsive/theme-blue/css/
-atom.config.compress.addon.folder=  
+
+# where to find js/css files, consumed by gulp, this path will be replace with relative path variable in tag file since js can not resolve java variable in tag 
 atom.config.js.root.folder=./_ui/responsive/common/
-atom.config.css.root.folder=./_ui/responsive/theme-blue/css/
+atom.config.css.root.folder=./_ui/responsive/theme-blue/
+
+###############################################################
 
 # Specifies the location of the spring context file added automatically to the global platform application context.
 atom.application-context=atom-spring.xml
