--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 #   
 #  
 # -----------------------------------------------------------------------
-    
+     
 # you can put key/value pairs here.
 # Use Config.getParameter(..) to retrieve the values during runtime.
 
@@ -21,7 +21,7 @@
 # 	all the attributes with name XXXX.folder will be consumed by gulp 
 # 	and with name XXX.filePath with consumed by java (or both with gulp)
 # 	XXXX.folder should relative path and root is webroot folder in storefront   
-# 	XXX.filePath should related to HTTP context Path (or webroot folder)       
+# 	XXX.filePath should related to HTTP context Path (or webroot folder)        
 #
 ###########################################################################################
 atom.config.LESS.enabled=true
@@ -42,6 +42,9 @@ atom.config.compress.css.dest.filePath=./_ui/responsive/theme-blue/css/
 atom.config.js.root.folder=./_ui/responsive/common/
 atom.config.css.root.folder=./_ui/responsive/theme-blue/
 
+# http/https proxy which used to get resources from internet when during build phase
+atom.config.build.env.proxy.host=proxy.pal.sap.corp
+atom.config.build.env.proxy.port=8080
 ###############################################################
 
 # Specifies the location of the spring context file added automatically to the global platform application context.
