--- a/project.properties
+++ b/project.properties
@@ -43,8 +43,8 @@ atom.config.js.root.folder=./_ui/responsive/common/
 atom.config.css.root.folder=./_ui/responsive/theme-blue/
 
 # http/https proxy which used to get resources from internet when during build phase
-atom.config.build.env.proxy.host=proxy.pal.sap.corp
-atom.config.build.env.proxy.port=8080
+atom.config.build.env.proxy.host=
+atom.config.build.env.proxy.port=
 ###########################################################################################
 
 # Specifies the location of the spring context file added automatically to the global platform application context.
