--- a/project.properties
+++ b/project.properties
@@ -20,10 +20,10 @@
 # following part used to configure static resources related optimization   
 # 	all the attributes with name XXXX.folder will be consumed by gulp 
 # 	and with name XXX.filePath with consumed by java (or both with gulp)
-# 	XXXX.folder should relative path and root is webroot folder in storefront   
-# 	XXX.filePath should related to HTTP context Path (or webroot folder)          
+# 	XXXX.folder should relative path and root is webroot folder in storefront    
+# 	XXX.filePath should related to HTTP context Path (or webroot folder)             
 #
-###########################################################################################
+#################################start of atom related configuration##########################################################
 atom.config.LESS.enabled=true
 # LESS file folder , consumed by gulp    
 atom.config.LESS.source.folder=./_ui/responsive/theme-blue/css/
@@ -43,9 +43,20 @@ atom.config.js.root.folder=./_ui/responsive/common/
 atom.config.css.root.folder=./_ui/responsive/theme-blue/
 
 # http/https proxy which used to get resources from internet when during build phase
-atom.config.build.env.proxy.host=
-atom.config.build.env.proxy.port=
-###########################################################################################
+atom.config.build.env.proxy.host=proxy.pal.sap.corp
+atom.config.build.env.proxy.port=8080
+
+# jshint related configuration  
+atom.config.jshint.enable=true
+
+# lint js in side JSP file
+atom.config.jshint.extract.enable=true
+atom.config.jshint.extract.folder=./WEB-INF/views/responsive/pages/*.jsp
+
+
+
+
+#######################################end of atom related configuration####################################################
 
 # Specifies the location of the spring context file added automatically to the global platform application context.
 atom.application-context=atom-spring.xml
