--- a/project.properties
+++ b/project.properties
@@ -20,7 +20,7 @@
 # following part used to configure static resources related optimization   
 # 	all the attributes with name XXXX.folder will be consumed by gulp 
 # 	and with name XXX.filePath with consumed by java (or both with gulp)
-# 	XXXX.folder should relative path and root is webroot folder in storefront    
+# 	XXXX.folder should relative path and root is webroot folder in storefront     
 # 	XXX.filePath should related to HTTP context Path (or webroot folder)             
 #
 #################################start of atom related configuration##########################################################
@@ -43,8 +43,8 @@ atom.config.js.root.folder=./_ui/responsive/common/
 atom.config.css.root.folder=./_ui/responsive/theme-blue/
 
 # http/https proxy which used to get resources from internet when during build phase
-atom.config.build.env.proxy.host=proxy.pal.sap.corp
-atom.config.build.env.proxy.port=8080
+#atom.config.build.env.proxy.host=
+#atom.config.build.env.proxy.port=
 
 # jshint related configuration  
 atom.config.jshint.enable=true
