changes for tag and handler

--- a/project.properties
+++ b/project.properties
@@ -67,13 +67,13 @@ atom.config.jshint.extract.folder=./WEB-INF/views/responsive/pages/*.jsp
 atom.application-context=atom-spring.xml
 
 
-adamstorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
-adamstorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
+nemostorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
+#nemostorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
 
-storefront.supportedUiExperienceLevels.electronics=DESKTOP,MOBILE
-storefront.supportedUiExperienceLevels.apparel-uk=DESKTOP,MOBILE
-storefront.supportedUiExperienceLevels.apparel-de=DESKTOP,MOBILE
-storefront.supportedUiExperienceLevels.powertools=DESKTOP
+#nemostorefront.supportedUiExperienceLevels.electronics=DESKTOP,MOBILE
+#nemostorefront.supportedUiExperienceLevels.apparel-uk=DESKTOP,MOBILE
+#nemostorefront.supportedUiExperienceLevels.apparel-de=DESKTOP,MOBILE
+#nemostorefront.supportedUiExperienceLevels.powertools=DESKTOP
 
 
 atom.javascript.paths.desktop=/desktop/common/js/atom.js
