--- a/project.properties
+++ b/project.properties
@@ -1,19 +1,21 @@
 # -----------------------------------------------------------------------
 # [y] hybris Platform 
-#   
+# 
 # Copyright (c) 2000-2015 hybris AG
-# All rights reserved.   
-#       
+# All rights reserved.
+#  
 # This software is the confidential and proprietary information of hybris 
 # ("Confidential Information"). You shall not disclose such Confidential
 # Information and shall use it only in accordance with the terms of the
-# license agreement you entered into with hybris. 
-#   
+# license agreement you entered into with hybris.
+#
 #  
 # -----------------------------------------------------------------------
-     
+
 # you can put key/value pairs here.
 # Use Config.getParameter(..) to retrieve the values during runtime.
+
+atom.key=value
 
 ###########################################################################################
 #
@@ -67,16 +69,17 @@ atom.config.jshint.extract.folder=./WEB-INF/views/responsive/pages/*.jsp
 atom.application-context=atom-spring.xml
 
 
-nemostorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
-#nemostorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
-
-#nemostorefront.supportedUiExperienceLevels.electronics=DESKTOP,MOBILE
-#nemostorefront.supportedUiExperienceLevels.apparel-uk=DESKTOP,MOBILE
-#nemostorefront.supportedUiExperienceLevels.apparel-de=DESKTOP,MOBILE
-#nemostorefront.supportedUiExperienceLevels.powertools=DESKTOP
+storefront.supportedUiExperienceLevels.electronics=DESKTOP,MOBILE
+storefront.supportedUiExperienceLevels.apparel-uk=DESKTOP,MOBILE
+storefront.supportedUiExperienceLevels.apparel-de=DESKTOP,MOBILE
+storefront.supportedUiExperienceLevels.powertools=DESKTOP
 
 
 atom.javascript.paths.desktop=/desktop/common/js/atom.js
 atom.javascript.paths.mobile=/desktop/common/js/atom.js
 atom.css.paths.desktop=/desktop/common/css/atom.css
 atom.css.paths.mobile=/mobile/common/css/atom.css
+
+nemostorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
+
+nemob2bstorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
