enable hash file name

--- a/project.properties
+++ b/project.properties
@@ -1,61 +1,62 @@
 # -----------------------------------------------------------------------
 # [y] hybris Platform 
-# 
+#   
 # Copyright (c) 2000-2015 hybris AG
-# All rights reserved.
-#  
+# All rights reserved.   
+#       
 # This software is the confidential and proprietary information of hybris 
 # ("Confidential Information"). You shall not disclose such Confidential
 # Information and shall use it only in accordance with the terms of the
-# license agreement you entered into with hybris.
-#
+# license agreement you entered into with hybris. 
+#   
 #  
 # -----------------------------------------------------------------------
-
+     
 # you can put key/value pairs here.
-# Use Config.getParameter(..) to retrieve the values during runtime.    
-
-atom.key=value
+# Use Config.getParameter(..) to retrieve the values during runtime.
 
 ###########################################################################################
 #
 # following part used to configure static resources related optimization  
 # rules should be noticed: 
 # 	all the attributes with name XXXX.folder will be consumed by gulp 
-# 	and with name XXX.filePath with consumed by java (or both with gulp)
+# 	and with name XXX.filePath with consumed by java (or both with gulp)  
 # 	XXXX.folder: should relative path and root is webroot folder in storefront     
 # 	XXX.filePath: should related to HTTP context Path (or webroot folder)  
-#	seperator for attributes value should be ','                  
+#	seperator for attributes value should be ','            
 #
 #################################start of atom related configuration##########################################################
 atom.config.LESS.enabled=true
 # LESS file folder , consumed by gulp    
-atom.config.LESS.source.folder=./_ui/desktop/theme-blue/css/
-atom.config.LESS.dest.folder=./_ui/desktop/theme-blue/css/
+atom.config.LESS.source.folder=./_ui/responsive/theme-blue/css/
+atom.config.LESS.dest.folder=./_ui/responsive/theme-blue/css/
 
 atom.config.compress.enabled=true
 
 # folder for css.tag and js.tag, gulp will try to find these files and compress whatever in them 
-atom.config.compress.sourceTag.folder=./WEB-INF/tags/desktop/template/compressible/
+atom.config.compress.sourceTag.folder=./WEB-INF/tags/responsive/template/compressible/
 
 # final dest folder for compress result , combind.min.js/css will be placed in this folder, consumed by both gulp and JSP
-atom.config.compress.js.dest.filePath=./_ui/desktop/common/js/
-atom.config.compress.css.dest.filePath=./_ui/desktop/common/css/
+atom.config.compress.js.dest.filePath=./_ui/responsive/common/js/
+atom.config.compress.css.dest.filePath=./_ui/responsive/theme-blue/css/
 
 # where to find js/css files, consumed by gulp, this path will be replaced with relative path variable in tag file since js can not resolve java variable in tag 
-atom.config.js.root.folder=./_ui/desktop/common/
-atom.config.css.root.folder=./_ui/desktop/common/
+atom.config.js.root.folder=./_ui/responsive/common/
+atom.config.css.root.folder=./_ui/responsive/theme-blue/
 
 # http/https proxy which used to get resources from internet when during build phase
 atom.config.build.env.proxy.host=proxy.pal.sap.corp
 atom.config.build.env.proxy.port=8080
+
+# add-ons with static resources should be compressed
+atom.config.addon=b2ccheckoutaddon,liveeditaddon
 
 # jshint related configuration  
 atom.config.jshint.enable=true
 
 # lint js in side JSP file
 atom.config.jshint.extract.enable=true
-atom.config.jshint.extract.folder=./WEB-INF/views/desktop/pages/*.jsp
+atom.config.jshint.extract.folder=./WEB-INF/views/responsive/pages/*.jsp
 
 
 
@@ -66,17 +67,16 @@ atom.config.jshint.extract.folder=./WEB-INF/views/desktop/pages/*.jsp
 atom.application-context=atom-spring.xml
 
 
-storefront.supportedUiExperienceLevels.electronics=DESKTOP,MOBILE
-storefront.supportedUiExperienceLevels.apparel-uk=DESKTOP,MOBILE
-storefront.supportedUiExperienceLevels.apparel-de=DESKTOP,MOBILE
-storefront.supportedUiExperienceLevels.powertools=DESKTOP
+adamstorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
+#nemostorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
+
+#nemostorefront.supportedUiExperienceLevels.electronics=DESKTOP,MOBILE
+#nemostorefront.supportedUiExperienceLevels.apparel-uk=DESKTOP,MOBILE
+#nemostorefront.supportedUiExperienceLevels.apparel-de=DESKTOP,MOBILE
+#nemostorefront.supportedUiExperienceLevels.powertools=DESKTOP
 
 
 atom.javascript.paths.desktop=/desktop/common/js/atom.js
 atom.javascript.paths.mobile=/desktop/common/js/atom.js
 atom.css.paths.desktop=/desktop/common/css/atom.css
 atom.css.paths.mobile=/mobile/common/css/atom.css
-
-nemostorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
-
-nemob2bstorefront.additionalWebSpringConfigs.atom=classpath:/atom/web/spring/atom-web-spring.xml
