enable compress js/css for multiple JSP  page

--- a/project.properties
+++ b/project.properties
@@ -36,6 +36,11 @@ atom.config.compress.enabled=true
 # folder for css.tag and js.tag, gulp will try to find these files and compress whatever in them 
 atom.config.compress.sourceTag.folder=./WEB-INF/tags/responsive/template/compressible/
 
+# JSP file or file folder JSP files located which includes javascript/css files should be compressed. Supports multi-values seperated by ','
+# for addional source only jsp file supported. Means tag and all other file format is not support
+atom.config.addtional.source=./WEB-INF/views/responsive/pages
+
+
 # final dest folder for compress result , combind.min.js/css will be placed in this folder, consumed by both gulp and JSP
 atom.config.compress.js.dest.filePath=./_ui/responsive/common/js/
 atom.config.compress.css.dest.filePath=./_ui/responsive/theme-blue/css/
@@ -52,7 +57,7 @@ atom.config.build.env.proxy.port=8080
 atom.config.addon=b2ccheckoutaddon,liveeditaddon
 
 # jshint related configuration  
-atom.config.jshint.enable=true
+atom.config.jshint.enable=false
 
 # lint js in side JSP file
 atom.config.jshint.extract.enable=true
