--- a/acceleratoraddon/web/webroot/_ui/share/package.json
+++ b/acceleratoraddon/web/webroot/_ui/share/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "collect-stream": "^1.0.0",
     "deep-extend": "^0.4.0",
+    "glob": "^7.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
